--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -7,6 +7,23 @@
    "source": [
     "# AI Project for SWE 485"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welocme to AI Project\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Welocme to AI Project\")"
+   ]
   }
  ],
  "metadata": {
@@ -16,7 +33,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
   "orig_nbformat": 4,
