--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -10,19 +10,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# iporting data set\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iris =pd.read_csv('water_potability.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welocme to AI Project\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ph</th>\n",
+       "      <th>Hardness</th>\n",
+       "      <th>Solids</th>\n",
+       "      <th>Chloramines</th>\n",
+       "      <th>Sulfate</th>\n",
+       "      <th>Conductivity</th>\n",
+       "      <th>Organic_carbon</th>\n",
+       "      <th>Trihalomethanes</th>\n",
+       "      <th>Turbidity</th>\n",
+       "      <th>Potability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>204.890455</td>\n",
+       "      <td>20791.318981</td>\n",
+       "      <td>7.300212</td>\n",
+       "      <td>368.516441</td>\n",
+       "      <td>564.308654</td>\n",
+       "      <td>10.379783</td>\n",
+       "      <td>86.990970</td>\n",
+       "      <td>2.963135</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.716080</td>\n",
+       "      <td>129.422921</td>\n",
+       "      <td>18630.057858</td>\n",
+       "      <td>6.635246</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>592.885359</td>\n",
+       "      <td>15.180013</td>\n",
+       "      <td>56.329076</td>\n",
+       "      <td>4.500656</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.099124</td>\n",
+       "      <td>224.236259</td>\n",
+       "      <td>19909.541732</td>\n",
+       "      <td>9.275884</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>418.606213</td>\n",
+       "      <td>16.868637</td>\n",
+       "      <td>66.420093</td>\n",
+       "      <td>3.055934</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.316766</td>\n",
+       "      <td>214.373394</td>\n",
+       "      <td>22018.417441</td>\n",
+       "      <td>8.059332</td>\n",
+       "      <td>356.886136</td>\n",
+       "      <td>363.266516</td>\n",
+       "      <td>18.436524</td>\n",
+       "      <td>100.341674</td>\n",
+       "      <td>4.628771</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9.092223</td>\n",
+       "      <td>181.101509</td>\n",
+       "      <td>17978.986339</td>\n",
+       "      <td>6.546600</td>\n",
+       "      <td>310.135738</td>\n",
+       "      <td>398.410813</td>\n",
+       "      <td>11.558279</td>\n",
+       "      <td>31.997993</td>\n",
+       "      <td>4.075075</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ph    Hardness        Solids  Chloramines     Sulfate  Conductivity  \\\n",
+       "0       NaN  204.890455  20791.318981     7.300212  368.516441    564.308654   \n",
+       "1  3.716080  129.422921  18630.057858     6.635246         NaN    592.885359   \n",
+       "2  8.099124  224.236259  19909.541732     9.275884         NaN    418.606213   \n",
+       "3  8.316766  214.373394  22018.417441     8.059332  356.886136    363.266516   \n",
+       "4  9.092223  181.101509  17978.986339     6.546600  310.135738    398.410813   \n",
+       "\n",
+       "   Organic_carbon  Trihalomethanes  Turbidity  Potability  \n",
+       "0       10.379783        86.990970   2.963135           0  \n",
+       "1       15.180013        56.329076   4.500656           0  \n",
+       "2       16.868637        66.420093   3.055934           0  \n",
+       "3       18.436524       100.341674   4.628771           0  \n",
+       "4       11.558279        31.997993   4.075075           0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"Welocme to AI Project\")"
+    "# To print the first five datasets\n",
+    "iris.head()"
    ]
   }
  ],
