--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -5,7 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AI Project for SWE 485"
+    "# AI Project for SWE 485 | G3 | Water Quality\n",
+    "Student Name : Khawlah Alnayel | Student ID : 441200943 \n",
+    "\n",
+    "Student Name : Sarah Alomar  | Student ID : 441200917 \n",
+    "\n",
+    " Student Name : Hessah Aljohaimy  | Student ID : 441201152"
    ]
   },
   {
