--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -969,6 +969,379 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ph</th>\n",
+       "      <th>Hardness</th>\n",
+       "      <th>Solids</th>\n",
+       "      <th>Chloramines</th>\n",
+       "      <th>Sulfate</th>\n",
+       "      <th>Conductivity</th>\n",
+       "      <th>Organic_carbon</th>\n",
+       "      <th>Trihalomethanes</th>\n",
+       "      <th>Turbidity</th>\n",
+       "      <th>Potability</th>\n",
+       "      <th>ph_discretized</th>\n",
+       "      <th>Hardness_discretized</th>\n",
+       "      <th>Chloramines_discretized</th>\n",
+       "      <th>Conductivity_discretized</th>\n",
+       "      <th>Organic_carbon_discretized</th>\n",
+       "      <th>Solids_discretized</th>\n",
+       "      <th>Sulfate_discretized</th>\n",
+       "      <th>Trihalomethanes_discretized</th>\n",
+       "      <th>Turbidity_discretized</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.316766</td>\n",
+       "      <td>214.373394</td>\n",
+       "      <td>22018.417441</td>\n",
+       "      <td>8.059332</td>\n",
+       "      <td>356.886136</td>\n",
+       "      <td>363.266516</td>\n",
+       "      <td>18.436524</td>\n",
+       "      <td>100.341674</td>\n",
+       "      <td>4.628771</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>Very Hard</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>High</td>\n",
+       "      <td>High</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9.092223</td>\n",
+       "      <td>181.101509</td>\n",
+       "      <td>17978.986339</td>\n",
+       "      <td>6.546600</td>\n",
+       "      <td>310.135738</td>\n",
+       "      <td>398.410813</td>\n",
+       "      <td>11.558279</td>\n",
+       "      <td>31.997993</td>\n",
+       "      <td>4.075075</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Alkaline</td>\n",
+       "      <td>Very Hard</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.584087</td>\n",
+       "      <td>188.313324</td>\n",
+       "      <td>28748.687739</td>\n",
+       "      <td>7.544869</td>\n",
+       "      <td>326.678363</td>\n",
+       "      <td>280.467916</td>\n",
+       "      <td>8.399735</td>\n",
+       "      <td>54.917862</td>\n",
+       "      <td>2.559708</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Acidic</td>\n",
+       "      <td>Very Hard</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>10.223862</td>\n",
+       "      <td>248.071735</td>\n",
+       "      <td>28749.716544</td>\n",
+       "      <td>7.513408</td>\n",
+       "      <td>393.663396</td>\n",
+       "      <td>283.651634</td>\n",
+       "      <td>13.789695</td>\n",
+       "      <td>84.603556</td>\n",
+       "      <td>2.672989</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Alkaline</td>\n",
+       "      <td>Very Hard</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>High</td>\n",
+       "      <td>High</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8.635849</td>\n",
+       "      <td>203.361523</td>\n",
+       "      <td>13672.091764</td>\n",
+       "      <td>4.563009</td>\n",
+       "      <td>303.309771</td>\n",
+       "      <td>474.607645</td>\n",
+       "      <td>12.363817</td>\n",
+       "      <td>62.798309</td>\n",
+       "      <td>4.401425</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Alkaline</td>\n",
+       "      <td>Very Hard</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3267</th>\n",
+       "      <td>8.989900</td>\n",
+       "      <td>215.047358</td>\n",
+       "      <td>15921.412018</td>\n",
+       "      <td>6.297312</td>\n",
+       "      <td>312.931022</td>\n",
+       "      <td>390.410231</td>\n",
+       "      <td>9.899115</td>\n",
+       "      <td>55.069304</td>\n",
+       "      <td>4.613843</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Alkaline</td>\n",
+       "      <td>Very Hard</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3268</th>\n",
+       "      <td>6.702547</td>\n",
+       "      <td>207.321086</td>\n",
+       "      <td>17246.920347</td>\n",
+       "      <td>7.708117</td>\n",
+       "      <td>304.510230</td>\n",
+       "      <td>329.266002</td>\n",
+       "      <td>16.217303</td>\n",
+       "      <td>28.878601</td>\n",
+       "      <td>3.442983</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>Very Hard</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3269</th>\n",
+       "      <td>11.491011</td>\n",
+       "      <td>94.812545</td>\n",
+       "      <td>37188.826022</td>\n",
+       "      <td>9.263166</td>\n",
+       "      <td>258.930600</td>\n",
+       "      <td>439.893618</td>\n",
+       "      <td>16.172755</td>\n",
+       "      <td>41.558501</td>\n",
+       "      <td>4.369264</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Alkaline</td>\n",
+       "      <td>Mod Hard</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>High</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3270</th>\n",
+       "      <td>6.069616</td>\n",
+       "      <td>186.659040</td>\n",
+       "      <td>26138.780191</td>\n",
+       "      <td>7.747547</td>\n",
+       "      <td>345.700257</td>\n",
+       "      <td>415.886955</td>\n",
+       "      <td>12.067620</td>\n",
+       "      <td>60.419921</td>\n",
+       "      <td>3.669712</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Acidic</td>\n",
+       "      <td>Very Hard</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3271</th>\n",
+       "      <td>4.668102</td>\n",
+       "      <td>193.681735</td>\n",
+       "      <td>47580.991603</td>\n",
+       "      <td>7.166639</td>\n",
+       "      <td>359.948574</td>\n",
+       "      <td>526.424171</td>\n",
+       "      <td>13.894419</td>\n",
+       "      <td>66.687695</td>\n",
+       "      <td>4.435821</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Acidic</td>\n",
+       "      <td>Very Hard</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>High</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>High</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2011 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             ph    Hardness        Solids  Chloramines     Sulfate  \\\n",
+       "3      8.316766  214.373394  22018.417441     8.059332  356.886136   \n",
+       "4      9.092223  181.101509  17978.986339     6.546600  310.135738   \n",
+       "5      5.584087  188.313324  28748.687739     7.544869  326.678363   \n",
+       "6     10.223862  248.071735  28749.716544     7.513408  393.663396   \n",
+       "7      8.635849  203.361523  13672.091764     4.563009  303.309771   \n",
+       "...         ...         ...           ...          ...         ...   \n",
+       "3267   8.989900  215.047358  15921.412018     6.297312  312.931022   \n",
+       "3268   6.702547  207.321086  17246.920347     7.708117  304.510230   \n",
+       "3269  11.491011   94.812545  37188.826022     9.263166  258.930600   \n",
+       "3270   6.069616  186.659040  26138.780191     7.747547  345.700257   \n",
+       "3271   4.668102  193.681735  47580.991603     7.166639  359.948574   \n",
+       "\n",
+       "      Conductivity  Organic_carbon  Trihalomethanes  Turbidity  Potability  \\\n",
+       "3       363.266516       18.436524       100.341674   4.628771           0   \n",
+       "4       398.410813       11.558279        31.997993   4.075075           0   \n",
+       "5       280.467916        8.399735        54.917862   2.559708           0   \n",
+       "6       283.651634       13.789695        84.603556   2.672989           0   \n",
+       "7       474.607645       12.363817        62.798309   4.401425           0   \n",
+       "...            ...             ...              ...        ...         ...   \n",
+       "3267    390.410231        9.899115        55.069304   4.613843           1   \n",
+       "3268    329.266002       16.217303        28.878601   3.442983           1   \n",
+       "3269    439.893618       16.172755        41.558501   4.369264           1   \n",
+       "3270    415.886955       12.067620        60.419921   3.669712           1   \n",
+       "3271    526.424171       13.894419        66.687695   4.435821           1   \n",
+       "\n",
+       "     ph_discretized Hardness_discretized Chloramines_discretized  \\\n",
+       "3           Neutral            Very Hard                    High   \n",
+       "4          Alkaline            Very Hard                  Medium   \n",
+       "5            Acidic            Very Hard                  Medium   \n",
+       "6          Alkaline            Very Hard                  Medium   \n",
+       "7          Alkaline            Very Hard                     Low   \n",
+       "...             ...                  ...                     ...   \n",
+       "3267       Alkaline            Very Hard                     Low   \n",
+       "3268        Neutral            Very Hard                  Medium   \n",
+       "3269       Alkaline             Mod Hard                    High   \n",
+       "3270         Acidic            Very Hard                    High   \n",
+       "3271         Acidic            Very Hard                  Medium   \n",
+       "\n",
+       "     Conductivity_discretized Organic_carbon_discretized Solids_discretized  \\\n",
+       "3                         Low                       High             Medium   \n",
+       "4                      Medium                        Low             Medium   \n",
+       "5                         Low                        Low               High   \n",
+       "6                         Low                     Medium               High   \n",
+       "7                        High                        Low                Low   \n",
+       "...                       ...                        ...                ...   \n",
+       "3267                   Medium                        Low                Low   \n",
+       "3268                      Low                       High                Low   \n",
+       "3269                   Medium                       High               High   \n",
+       "3270                   Medium                        Low               High   \n",
+       "3271                     High                     Medium               High   \n",
+       "\n",
+       "     Sulfate_discretized Trihalomethanes_discretized Turbidity_discretized  \n",
+       "3                   High                        High                  High  \n",
+       "4                    Low                         Low                Medium  \n",
+       "5                 Medium                         Low                   Low  \n",
+       "6                   High                        High                   Low  \n",
+       "7                    Low                      Medium                  High  \n",
+       "...                  ...                         ...                   ...  \n",
+       "3267                 Low                         Low                  High  \n",
+       "3268                 Low                         Low                   Low  \n",
+       "3269                 Low                         Low                  High  \n",
+       "3270              Medium                      Medium                Medium  \n",
+       "3271                High                      Medium                  High  \n",
+       "\n",
+       "[2011 rows x 19 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
