--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -1995,7 +1995,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "our dataset after discretization, and remove null value ."
+    "our dataset after discretization, and remove null value contains 2011 rows and 19 columns."
    ]
   }
  ],
