--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -2272,6 +2272,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The image obove is visualize ROC curve, which is represent the trade-off between sensitivity and specificity"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**SVM Classifier**"
    ]
   },
@@ -2536,7 +2544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here We implement the confusion matrix and obtaind the results which are 240 true negative and 163 are false positive."
+    "Here We implement the confusion matrix and obtaind the results which are 240 true negative and 163 are false neagtive and the true positive and false positive are both 0."
    ]
   },
   {
@@ -2591,6 +2599,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we obtain the report regarding the model where it has the precision that equals to 0.60 for the negative and 0 for the positive .Also , the recall is 1 for negative and 0 for positive.Along with the f1-score that is 0.75 for negative and 0 for positive .Lastly the support is 240 for negative and 163 for positive.Also , it shows the averages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -2615,6 +2631,14 @@
     "from sklearn.metrics import classification_report\n",
     "\n",
     "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the ROC Curve below the line is stright and parallel to the curve therefore it shows that the model is not predecting and not knowing the dataset right .And this result occurs from the values that are in  the dataset where they are unclear!"
    ]
   },
   {
