--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -2882,7 +2882,7 @@
     "\n",
     "--------------------------------------------------------------\n",
     "\n",
-    "In visualization below we can obtain that the three models gives a close results regarding the Acccuracy and Precision and Recall Score .From that we obtain that the dataset was unclaer to the models to train from and enven we have used a cross folding methods and we did the preprossing for our data set it is still gives a bad results. "
+    "In visualization below we can obtain that the three models gives a close results regarding the Acccuracy and Precision and Recall Score .From that we obtain that the dataset was unclaer to the models to train from and enven we have used a cross folding methods and we did the preprossing for our data set it is still gives a bad results.But , Among the models for our data set the Decision Tree model gave us the best results among the three models. "
    ]
   },
   {
