--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -2397,7 +2397,7 @@
    "source": [
     "*Descsion tree visulization*\n",
     "\n",
-    "Finally, the last step is to vizualize our tree and compare the reults. Firstly, we will visualize our decision tree using the plot_tree method from the 'matplotib' library. The visualization will be a plot tree that showcases the branching of our decision tree along with some information for each node."
+    "Finally, the last step is to vizualize our tree and compare the reults. Firstly, we will visualize our decision tree using the plot_tree method from the 'matplotib' library. The visualization will be a plot tree that showcases the branching of our decision tree along with some information for each node.(note: we obtained that the tree appeard to be complecated and hard to read although we trained the model with the preprocessed dataset .It also shows how the DT reached to the results)"
    ]
   },
   {
