--- a/AI_Project.ipynb
+++ b/AI_Project.ipynb
@@ -2327,7 +2327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we calculated the Accuracy of the model which is 56.95 and the Precision which is 45.14 and the Recall is 45.14."
+    "Here we calculated the Accuracy of the model which is 56.45 and the Precision which is 44.71 and the Recall is 46.41."
    ]
   },
   {
@@ -2621,14 +2621,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here we calculated the Accuracy equals to 59.55 and Precision equals to 0 and Recall equals to 0."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 135,
    "metadata": {},
@@ -2653,6 +2645,14 @@
     "accuracyScore3= metrics.accuracy_score(y_test,y_pred)\n",
     "precisionScore3=metrics.precision_score(y_test,y_pred)\n",
     "recallscore3=metrics.recall_score(y_test,y_pred)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we calculated the Accuracy equals to 59.55 and Precision equals to 0 and Recall equals to 0."
    ]
   },
   {
@@ -2743,6 +2743,14 @@
     "plt.title('confusion matrix',y=1.1)\n",
     "plt.ylabel('actual label')\n",
     "plt.xlabel('predicted label')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here , we obtain the confusion matrix we obtain the results which are TN=240 , TP=0 , FN=163 , FP = 0  "
    ]
   },
   {
@@ -2862,7 +2870,7 @@
     "\n",
     "Decision Tree is 56.45, \n",
     "\n",
-    "and the SVM is 59.7.\n",
+    "and the SVM is 59.55.\n",
     "\n",
     "--------------------------------------------------------------\n",
     "\n",
