--- a/Unsupervised_Learning/unsupervised_Learning.ipynb
+++ b/Unsupervised_Learning/unsupervised_Learning.ipynb
@@ -376,17 +376,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The k and associated Silhouette scores are:  {2: 0.6274812851154871, 3: 0.5894059923088207, 4: 0.5706047214701452, 5: 0.5696042619026317}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.datasets import make_blobs\n",
     "from sklearn.metrics import silhouette_samples, silhouette_score"
@@ -397,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Implement the silhouette algorithm.We can observe the fllowing results for each clustering value starting from 2 up untill 5 clusters :\n",
+    "Implement the silhouette algorithm.We can observe the fllowing results for each clustering values [2 ,4 ,5] :\n",
     "\n",
     "2: 0.627481431521672,\n",
     "\n",
@@ -435,11 +427,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The k=4 Silhouette scores is :  0.5701770555763994\n"
+     ]
+    }
+   ],
+   "source": [
+    "silhouette_scores = dict()\n",
+    "range_of_k = range(4,5)\n",
+    "for k in range_of_k :\n",
+    "    untrained_model = KMeans(n_clusters=k)\n",
+    "    trained_model=untrained_model.fit(reduced_data)\n",
+    "    cluster_labels = trained_model.labels_\n",
+    "    score=silhouette_score(reduced_data, cluster_labels)\n",
+    "    # silhouette_scores[k]=score\n",
+    "print(\"The k=4 Silhouette scores is : \",score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The k=5 Silhouette scores is :  0.5694133677046461\n"
+     ]
+    }
+   ],
+   "source": [
+    "silhouette_scores = dict()\n",
+    "range_of_k = range(5,6)\n",
+    "for k in range_of_k :\n",
+    "    untrained_model = KMeans(n_clusters=k)\n",
+    "    trained_model=untrained_model.fit(reduced_data)\n",
+    "    cluster_labels = trained_model.labels_\n",
+    "    score=silhouette_score(reduced_data, cluster_labels)\n",
+    "    # silhouette_scores[k]=score\n",
+    "print(\"The k=5 Silhouette scores is : \",score)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we Visualized the results of each clustring value and as the figure shows the k=2 provides the best silhouette coefficient results and the closest value to +1."
+    "Here we Visualized the results of each clustring value and as the figure shows the k=2 provides the best silhouette coefficient results and the closest value to +1.And according to the plot below we can see that k=2 has the closest value to +1 "
    ]
   },
   {
@@ -488,6 +530,16 @@
     "The within-cluster sum of squares is a measure of the variability of the observations within each cluster. In general, a cluster that has a small sum of squares is more compact than a cluster that has a large sum of squares. Clusters that have higher values exhibit greater variability of the observations within the cluster.[source]\n",
     "\n",
     "[source]Interpret all statistics and graphs for Cluster K-means (no date) Minitab. Available at: https://support.minitab.com/en-us/minitab/21/help-and-how-to/statistical-modeling/multivariate/how-to/cluster-k-means/interpret-the-results/all-statistics-and-graphs/#:~:text=The%20within%2Dcluster%20sum%20of%20squares%20is%20a%20measure%20of,a%20large%20sum%20of%20squares. (Accessed: 19 May 2023). "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the clusters we have k = 2,4,5 each cluster provides diffrent reslutes.\n",
+    "\n",
+    "In k = 2 the TWSS equals to 152.347 approximately.While in k = 4 the TWSS equals to 57.22 approximately and in k = 5 the TWSS equals to 46.46 approximately.And According to the Total Within Cluster Sum of Squares the smaller the value is the more compact the cluster is and in our case k = 5 has the smallest value compared to k = 2 and k = 4."
    ]
   },
   {
