--- a/Unsupervised_Learning/unsupervised_Learning.ipynb
+++ b/Unsupervised_Learning/unsupervised_Learning.ipynb
@@ -114,9 +114,6 @@
    ],
    "source": [
     "#Source:https://towardsdatascience.com/elbow-method-is-not-sufficient-to-find-best-k-in-k-means-clustering-fc820da0631d\n",
-    "\n",
-    "\n",
-    "\n",
     "#install yellowbrick to vizualize the Elbow curve\n",
     "%pip install yellowbrick  \n",
     "\n",
@@ -142,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see from the image above, we will choose 2,4 and 5 as number if cluster"
+    "Based on the elbow method, we choose 4 as best value of k, also we deside to choose 5 because it's near to 4, the last value of k we choose 2 to see the diifrence betewen right and wrong value of k. So, k values are 2,4 and 5\n"
    ]
   },
   {
@@ -233,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see here, after we apply clustering with k=2 , we got these 2 groups. first group with orange color have pca1 from 0 to almost 1500, second group with purple color have pca1 less than 0 to -1500"
+    "As we can see here, after we apply clustering with k=2 , we got these 2 groups. first group with orange color have pca1 from 0 to almost 1500, second group with blue color have pca1 less than 0 to -1500. two groups are so close "
    ]
   },
   {
