--- a/Unsupervised_Learning/unsupervised_Learning.ipynb
+++ b/Unsupervised_Learning/unsupervised_Learning.ipynb
@@ -390,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the elbow method, we choose 3 as best value of k, also we deside to choose 4 because it's near to 3, the last value of k we choose 4 to see the diifrence betewen right and wrong value of k. So, k values are 2,3 and 4"
+    "Based on the elbow method, we choose 3 as best value of k, also we deside to choose 4 because it's near to 3, the last value of k we also choose 2 to see the diifrence betewen right and wrong value of k. So, k values are 2,3 and 4"
    ]
   },
   {
@@ -479,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see here, after we apply clustering with k=2 , we got these 2 groups. first group with blue color have pca1 from 0 to almost 1500, second group with green color have pca1 less than 0 to -1500. two groups are so close"
+    "As we can see here, after we apply clustering with k=2 , we got these 2 groups. first group with green color have pca1 from 0 to almost 1500, second group with blue color have pca1 less than 0 to -1500. two groups are so close"
    ]
   },
   {
@@ -533,7 +533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see here, it is better than k=2 since we can see different clusters in different location without overlapping between them"
+    "As we can see here, it is better than k=2 since we can see different clusters in different location without overlapping between them and we can see for the 3 clusters form grop pca1 and grop pca2 the first cluster starts from -1500 untill -500 and second cluster starts from -500 untill 500 last cluster starts from 500 and finishes at 1500"
    ]
   },
   {
@@ -587,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see here, it is also better than k=2, and same as k=3 we can see different clusters in different location without overlapping between them"
+    "As we can see here, it is also better than k=2, and same as k=3 we can see different clusters in different location without overlapping between them although it is different from the previous cluster where it has a well defined grouping for all 4 clusters."
    ]
   },
   {
