--- a/Unsupervised_Learning/unsupervised_Learning.ipynb
+++ b/Unsupervised_Learning/unsupervised_Learning.ipynb
@@ -533,7 +533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see here, it is better than k=2 since we can see different clusters in different location without overlapping between them and we can see for the 3 clusters form grop pca1 and grop pca2 the first cluster starts from -1500 untill -500 and second cluster starts from -500 untill 500 last cluster starts from 500 and finishes at 1500"
+    "As we can see here, it is same and close as k=2.We can see for the 3 clusters form grop pca1 and grop pca2 the first cluster starts from -1500 untill -500 and second cluster starts from -500 untill 500 last cluster starts from 500 and finishes at 1500"
    ]
   },
   {
@@ -587,7 +587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see here, it is also better than k=2, and same as k=3 we can see different clusters in different location without overlapping between them although it is different from the previous cluster where it has a well defined grouping for all 4 clusters."
+    "As we can see here, it is also diffrent from k=2, and diffrenet from k=3 we can see different clusters in different location without overlapping between them it is different from the previous cluster where it has a well defined grouping for all 4 clusters."
    ]
   },
   {
