--- a/Unsupervised_Learning/unsupervised_Learning.ipynb
+++ b/Unsupervised_Learning/unsupervised_Learning.ipynb
@@ -390,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the elbow method, we choose 3 as best value of k, also we deside to choose 4 because it's near to 3, the last value of k we also choose 2 to see the diifrence betewen right and wrong value of k. So, k values are 2,3 and 4"
+    "Based on the elbow method, we choose 3 as best value of k, also we deside to choose 2 because it's near to 3, the last value of k we also choose 4 to see the diifrence betewen right and wrong value of k and since it is also close to 3 as the elbow method shows. So, k values are 2,3 and 4"
    ]
   },
   {
